Adding the menu and pics

--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Peilun</title>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/main.css">
-
-	</head>
+			</head>
 	<body>
-		New Text
+		<div id="topbar">
+			<div id="header">
+				<nav>
+					<ul class="menu">
+						<li><a href="work.html">Work</a></li>
+						<li><a href="blog.html">Blog</a></li>
+						<li><a href="About me .html">About me</a></li>
+						<li><a href="Contract">Contract</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+
+		
+		<div id="container">
+			<img src="http://upload.wikimedia.org/wikipedia/commons/0/06/Photographer.jpg">
+				<p> 
+					I am 22, a sophomore student in the Ohio State University. As a young coding prgramer and photographer, I travlled a lot and worked harder to improve myself and explore the world! So excited to get cracking!
+				</p>
+		</div>
+
+		<div id="contact me">
+			<p> send a email to me! </p>
+			<input type="email" placeholder="Email">
+			<input type="submit"> 
+		</div>
 	</body>
 </html>
