Adding a blog page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 	<head>
 		<title>Peilun</title>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/main.css">
-			</head>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300' rel='stylesheet' type='text/css'>
+		
+	</head>
+
 	<body>
 		<div id="topbar">
 			<div id="header">
@@ -23,13 +25,13 @@
 		<div id="container">
 			<img src="http://upload.wikimedia.org/wikipedia/commons/0/06/Photographer.jpg">
 				<p> 
-					I am 22, a sophomore student in the Ohio State University. As a young coding prgramer and photographer, I travlled a lot and worked harder to improve myself and explore the world! So excited to get cracking!
+					I am 22, a sophomore student in the Ohio State University. As a young coding programer and photographer, I travlled a lot and worked harder in order to improve myself and explore the world! Let's get cracking!
 				</p>
 		</div>
 
 		<div id="contact me">
-			<p> send a email to me! </p>
-			<input type="email" placeholder="Email">
+			<p> send a message to me! </p>
+			<input type="message" placeholder="message">
 			<input type="submit"> 
 		</div>
 	</body>
