change h1 and font size

--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
 
 			<div class="blog-body">
 				<div class="blog-title">
-					<h1 class="blog-h1">London</h1>
+					<h1 >London</h1>
 					<div class="blog-date">11th January 2012</div>
 				</div>
 				<div class="blog-image" style="background-image:url(http://www.corinthia.com/global/london/destination/1280x570/london_4_hero.jpg);">
